[package]
name = "test_binance"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = "*"
tokio-tungstenite = { version = "*", features = ["native-tls"] }
serde_json = "*"
eyre = "*"
serde = {version = "*", features = ["derive"]}
tungstenite = "0.26.2"
futures-util = "0.3.31"
tokio = { version = "1.44.2", features = ["macros", "net", "rt-multi-thread"] }
